[project]
name = "GridMazeSolver"
version = "0.1.0"
description = "It solves grids"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deap>=1.4.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
]

[project.scripts]
grid-maze-solver = "grid_maze_solver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grid_maze_solver"]


